--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,104 @@
+* 2021/04/25 (日)
+goの勉強でやっとインターフェースとかの話が終わった。
+クラスとかインスタンスという言葉が使えないのが不便でしかたない。
+
+朝六時くらいに起きてしまったあと、二時間くらい昼寝していた。
+
+* 2021/04/24 (土)
+来客に備えてカーペットを新調することにした。
+お下がりは仕事部屋に来る予定。
+ついでにワイヤレスキーボードやワイヤレスマウスを買った。
+なので楽しみだ。散財まっしぐら。
+
+* 2021/04/23 (金)
+自己紹介するのが辛いと思った。
+大したことのない自分のことを話さなければならないというのが、他との差を感じてつらい。
+一般受けされるような趣味は持ってない。読書とか料理とか旅行とかしない。
+自分の世界に閉じこもっているだけだ。別段面白いものでもない。
+掘り下げられると困るから、言えないことばかりになる。
+結果、秘密主義の人みたいになってしまった。
+
+家族という逃げ場所があるのは本当にありがたい。
+
+* 2021/04/22 (木)
+githubのプルリクエストを作るときに、エラーが出るようになってしまった。
+こういうときEmacsを使うことにちょっとした絶望を感じる。
+メンテナンスしている人が個人なのでいつ修正されるかもわからない。
+自分で治せるくらいlispの理解があればよいのだが。
+
+* 2021/04/21 (水)
+Releaseトラブルが予想されたがとりあえず平穏に終わった。
+
+* 2021/04/20 (火)
+理由なき行いを減らしていくのがプロ？
+
+* 2021/04/19 (月)
+退去費用、清掃費用、エアコン掃除費用とかなり請求されてしまった。
+契約書に書いてあるのでと言われるが、納得した上で契約してないので非常に悔しい。
+相手の事情とか関係なく、自分が不利益を被る話になると、途端に苛つくのは間違いない。
+特に、何の縁もないビジネス上の取引関係だと、義理や人情で慮ることがなくなる。
+そういうとき自分の幼さを知る。普段は、たいして怒らないつもりでいるけれど、
+「好きでもない人のために、やらなくていい仕事が増える」のにすぐ怒ってしまう。
+恩を売るとか、そういう意味合いはあるはずなのだが、想像力が及ばない。
+自分が、本質的に優しくないということの証拠だ。
+
+サービスでつけた機能であってもそこに不具合があればユーザにストレスを与える。
+そしてバグだというフィードバックが帰ってくる。
+親切心が裏目に出るということ。よくあること。
+
+* 2021/04/18 (日)
+子供のように思われるかもしれないが、感情をケアしてくれと表明することも大事。
+ただその一方で、関わりのある人の感情も想像する事が必要。
+
+自分に責任はないと考えることで苦しみから逃れられるなら、それでいいはず。
+でも、それによって被害が拡大していくのを目の当たりにしたら、耐えられない息苦しさになるだろう。
+
+* 2021/04/17 (土)
+やりたいことがなくてボーッとしていると、満腹状態なのに何かを口に入れたくなって、カップラーメンをすすってしまう。
+
+* 2021/04/16 (金)
+目標をたてないから、失敗したかどうかわからない。反省もでてこない。改善されない。という指摘になるほどと思った。
+
+* 2021/04/15 (木)
+ふとしたことに孤独を感じる。
+
+* 2021/04/14 (水)
+お金をつかう。明るい緑色のカーテンを選んだ。クッションはヨギボーにした。机はオカムラ家具。
+
+* 2021/04/13 (火)
+退居作業。
+
+* 2021/04/12 (月)
+引っ越し作業。
+
+* 2021/04/11 (日)
+せっせと荷造り。冷蔵庫を空にして電源を抜く。いままで一番たくさん洗濯機を回す。
+風呂入った後は、タオルとかを片付けて、明日の朝にはカーテンを外して、布団を畳んで、蛍光灯を外す。
+それでおしまいだ。
+
+運び出すだけで済むように、少し掃除もしておこうか。
+
+* 2021/04/10 (土)
+go-playgroud を調べる。
+
+* 2021/04/09 (金)
+青葉とネギと水菜の組み合わせ良さそうに見える。
+
+普段言わない人が言うことが大事にされるのかもしれない。
+
+嫌いな人でも悲しそうにしてたら可愛そうと思うのは普通。
+
+* 2021/04/08 (木)
+ラジオ番組に応募したことが３回あって、ぜんぶ読まれている。結構話をふる才能あるのでは。
+
+* 2021/04/07 (水)
+ハナクソには内から排出されたものと、外から侵入したものとがある。
+
+* 2021/04/06 (火)
+まあまあ早く起きた。頑張った。
+
+* 2021/04/05 (月)
+
 * 2021/04/04 (日)
 真面目にインライン数式に対応した。 $f(x)=x^2+4$ こんなふうに書ける。ただそれでも mathjax 数式に日本語を埋め込むと表示が壊れる。フォントがおかしいのだろうか。mathjax 3 ではフォントをサポートしてないらしい。それが原因かもしれない。
 
