--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,38 @@
+
+* 2021/05/01 (土)
+サイトのレイアウト調整。
+
+* 2021/04/30 (金)
+待ちわびたアークナイツのアップデート。
+ガチャ70回くらい回したらロスモンティスとマドロック両方手に入ったので満足して日常に戻った。
+マドロックはもっと激渋い男をイメージしてたのでなんとも言えない気持ちになる。美少女すぎた。
+男がほしいとは別に思ってないが頭の中で持たざるものイメージしてたので抵抗感がある。
+
+* 2021/04/29 (木)
+祝日。長めの散歩にでかけた。
+公園を一周した後、まんじゅうを買って、その後とんかつ屋に入ってみた。
+上ロース定食を頼んで、持ち帰ることにした。油っ気がなくて淡白な肉だった。
+これで5000歩くらいになった。
+
+暇だったので塊魂をインストールして遊んだ。
+その後ショップを眺めていたらKingdomシリーズに続編がでていたというのを知り、買いたくなった。
+その心を抑えてKingdom: new landsを起動した。いくつか実績を集めた。50日前後で倒れてしまった。
+大型のモンスタがー強すぎて抑えきれない。
+
+* 2021/04/28 (水)
+DMMカードが還元率4%だったり、5000ポイント付与だったりしていたので申し込みしてみた。
+そしてDMMブックスの50%還元セールを使って少しだけマンガを買った。
+すでに大量購入してしまったkindleがあるので辛いけどamazonで買うよりはお得なので乗り換えよう。
+
+ついでにamazonカードも申し込みしてみた。amazonは2%だけどDMMでは買えないものがあるから。
+
+* 2021/04/27 (火)
+面接官をした。会話をしながらこの人は合格を出せないな、と思ってしまった。
+早々に結論を出してしまうのは良くない。
+
+* 2021/04/26 (月)
+チェーンソーマンを読んだ。想像を遥かに超えて来た。面白かった。
+
 * 2021/04/25 (日)
 goの勉強でやっとインターフェースとかの話が終わった。
 クラスとかインスタンスという言葉が使えないのが不便でしかたない。
